@@ -36,6 +36,7 @@
     * database options are now handled by the weather stations.
     * all icons have been resized.
     * night and day weather icons are now displayed depending on sunrise and sunset.
+    * the computing of sunrise and sunset have simplified to compute for 6 days and use it later.
 
   * FIXED:
     * few corrections to make the weather station works on raspberry pi.
